argocd/applications/api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sample-apps
  name: api-svc
  labels:
    app: api-app
spec:
  type: NodePort
  selector:
    app: api-app
  ports:
    - port: 80
      targetPort: 80
